--- a/src/locales/es/messages.json
+++ b/src/locales/es/messages.json
@@ -4,8 +4,8 @@
   "User detail": "Detalles usuario",
   "Products": "Productos",
   "Categories": "Categorias",
-  "Category 1": "Categoria 1",
-  "Category 2": "Categoria 2",
+  "Category 1": "Categoría 1",
+  "Category 2": "Categoría 2",
   "Orders": "Pedidos",
   "Dispatched": "Enviado",
   "Refunding": "Reembolso",
@@ -63,6 +63,9 @@
   "Are you sure to delete these items?": "¿Estás seguro de eliminar estos elementos?",
   "The input is not a valid E-mail!": "¡La entrada no es un correo electrónico válido!",
   "Select a option": "Selecciona una opción",
-
-  "Id": "Id"
+  "Id": "Id",
+  "Users list": "Lista de Usuarios",
+  "Users section description": "Tablero con la información de los usuarios, puede modificar la información del usuario o eliminarlo.",
+  "First category list": "Clasificación de Categoria Primer Nivel",
+  "First category description": "Tablero de clasificación de la categoria primer nivel, puede agregar una nueva clasificación de productos, modificarla y eliminarla."
 }
