--- a/src/locales/es/messages.json
+++ b/src/locales/es/messages.json
@@ -6,11 +6,15 @@
   "Categories": "Categorias",
   "Category 1": "Categoría 1",
   "Category 2": "Categoría 2",
+  "Category name": "Nombre categoría",
   "Orders": "Pedidos",
   "Dispatched": "Enviado",
   "Refunding": "Reembolso",
   "Ads Management": "Gestión de anuncios",
   "Administration": "Administración",
+  "Description": "Descripción",
+  "Imagen": "Imagen",
+  "Active": "Activo",
 
   "Switch Theme": "Cambiar Tema",
   "Create": "Crear",
@@ -25,7 +29,7 @@
   "Light": "Blanco",
   "Dark": "Oscuro",
 
-  "Name": "Nombre y apellidos",
+  "UserName": "Nombre y apellidos",
   "Company": "Empresa",
   "TaxNumber": "Número fiscal",
   "TaxType": "Tipo fiscal",
