--- a/src/locales/zh/messages.json
+++ b/src/locales/zh/messages.json
@@ -6,11 +6,15 @@
   "Categories": "类别",
   "Category 1": "一级分类",
   "Category 2": "二级分类",
+  "Category name": "分类名称",
   "Orders": "订单",
   "Dispatched": "已分派",
   "Refunding": "退款",
   "Ads Management": "广告管理",
   "Administration": "管理",
+  "Description": "描述",
+  "Imagen": "图片",
+  "Active": "状态",
 
   "Switch Theme": "切换主题",
   "Create": "创建",
@@ -25,7 +29,7 @@
   "Light": "光",
   "Dark": "暗",
 
-  "Name": "姓名",
+  "UserName": "姓名",
   "Company": "公司",
   "TaxNumber": "税号",
   "TaxType": "税种",
