--- a/src/locales/en/messages.json
+++ b/src/locales/en/messages.json
@@ -6,11 +6,15 @@
   "Categories": "Categories",
   "Category 1": "Category 1",
   "Category 2": "Category 2",
+  "Category name": "Category name",
   "Orders": "Orders",
   "Dispatched": "Dispatched",
   "Refunding": "Refunding",
   "Ads Management": "Ads Management",
   "Administration": "Administration",
+  "Description": "Description",
+  "Imagen": "Imagen",
+  "Active": "Active",
 
   "Switch Theme": "Switch Theme",
   "Create": "Create",
@@ -25,7 +29,7 @@
   "Light": "Light",
   "Dark": "Dark",
 
-  "Name": "Name and surname",
+  "UserName": "Name and surname",
   "Company": "Company",
   "TaxNumber": "Tax number",
   "TaxType": "Tax type",
